added session #9